fix: Ajustei o overflow do body

--- a/src/App.css
+++ b/src/App.css
@@ -17,4 +17,5 @@
 body{
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
+  overflow-x: hidden;
 }
